--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -72,7 +72,7 @@ table {
   top: 0;
   bottom: 0;
   z-index: 10;
-  width: 350px;
+  width: 400px;
   height: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -87,6 +87,7 @@ table {
 }
 
 .side-menu-switch__label {
+  cursor: pointer;
   position: absolute;
   width: 40px;
   height: 80px;
@@ -157,5 +158,144 @@ table {
   background-color: white;
   padding: 10px;
   border-radius: 3px;
+}
+
+/* Estilo iOS */
+.switch__container {
+  width: 30px;
+  float: right;
+  clear: both;
+  padding-right: 32px;
+}
+
+.switch {
+  visibility: hidden;
+  position: absolute;
+  margin-left: -9999px;
+}
+
+.switch + label {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.switch--shadow + label {
+  padding: 2px;
+  width: 60px;
+  height: 30px;
+  background-color: #dddddd;
+  border-radius: 30px;
+}
+
+.switch--shadow + label:before,
+.switch--shadow + label:after {
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  bottom: 1px;
+  content: "";
+}
+
+.switch--shadow + label:before {
+  right: 1px;
+  background-color: #f1f1f1;
+  border-radius: 30px;
+  -webkit-transition: background 0.4s;
+  transition: background 0.4s;
+}
+
+.switch--shadow + label:after {
+  width: 32px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.switch--shadow:checked + label:before {
+  background-color: #8ce196;
+}
+
+.switch--shadow:checked + label:after {
+  -webkit-transform: translateX(30px);
+          transform: translateX(30px);
+}
+
+.locate__content {
+  padding-top: 40px;
+  min-height: 400px;
+}
+
+.locate__content p {
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+.coordinate-transform {
+  padding-top: 30px;
+}
+
+.coordinate-transform__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+.coordinate-transform__block > p {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 140px;
+          flex: 0 0 140px;
+  height: 30px;
+  line-height: 30px;
+  margin-right: 15px;
+  text-align: center;
+}
+
+.coordinate-transform__block > input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 20px;
+}
+
+.transform-result {
+  margin-bottom: 10px;
+}
+
+.transform-result > h5 {
+  padding-bottom: 10px;
+  font-weight: 600;
+}
+
+.transform-btn {
+  background-color: transparent;
+  border: 1px solid #5d5d5d;
+  color: #5d5d5d;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  padding: 10px 30px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.transform-btn:hover {
+  background-color: #5d5d5d;
+  color: white;
 }
 /*# sourceMappingURL=index.css.map */
