--- a/asset/scss/index.scss
+++ b/asset/scss/index.scss
@@ -6,22 +6,25 @@
 	width: 100%;
 	height: 100%;
 }
+
 .side-menu {
 	position: absolute;
 	left: 0;
 	top: 0;
 	bottom: 0;
 	z-index: 10;
-	width: 350px;
+	width: 400px;
 	height: 100%;
 	box-sizing: border-box;
 	background: #fff;
-	box-shadow: 5px 0px 10px hsla(240, 40%, 15%,.6);
+	box-shadow: 5px 0px 10px hsla(240, 40%, 15%, .6);
 	transform: translateX(-100%);
 	transition: .3s;
 	padding: 10px;
 }
+
 .side-menu-switch__label {
+	cursor: pointer;
 	position: absolute;
 	width: 40px;
 	height: 80px;
@@ -32,20 +35,24 @@
 	line-height: 80px;
 	text-align: center;
 	background-color: #000;
-	color:rgb(255, 255, 255);
+	color: rgb(255, 255, 255);
 	font-size: 30px;
 	border-radius: 0 10px 10px 0;
 	transition: .3s;
 }
+
 #side-menu-switch {
 	display: none;
 }
-#side-menu-switch:checked + .side-menu {
+
+#side-menu-switch:checked+.side-menu {
 	transform: translateX(0);
 }
-#side-menu-switch:checked + .side-menu label .fa-angle-right{
+
+#side-menu-switch:checked+.side-menu label .fa-angle-right {
 	transform: scaleX(-1);
-} 
+}
+
 #viewDiv {
 	padding: 0;
 	margin: 0;
@@ -85,11 +92,138 @@
 	top: 15px;
 	left: 15px;
 	padding: 10px;
+
 	button {
 		cursor: pointer;
 		border: 1px solid rgb(102, 102, 102);
 		background-color: rgb(255, 255, 255);
 		padding: 10px;
 		border-radius: 3px;
+	}
+}
+
+/* Estilo iOS */
+.switch__container {
+	width: 30px;
+	float: right;
+	clear: both;
+	padding-right: 32px;
+}
+
+.switch {
+	visibility: hidden;
+	position: absolute;
+	margin-left: -9999px;
+}
+
+.switch+label {
+	display: block;
+	position: relative;
+	cursor: pointer;
+	outline: none;
+	user-select: none;
+}
+
+.switch--shadow+label {
+	padding: 2px;
+	width: 60px;
+	height: 30px;
+	background-color: #dddddd;
+	border-radius: 30px;
+}
+
+.switch--shadow+label:before,
+.switch--shadow+label:after {
+	display: block;
+	position: absolute;
+	top: 1px;
+	left: 1px;
+	bottom: 1px;
+	content: "";
+}
+
+.switch--shadow+label:before {
+	right: 1px;
+	background-color: #f1f1f1;
+	border-radius: 30px;
+	transition: background 0.4s;
+}
+
+.switch--shadow+label:after {
+	width: 32px;
+	background-color: #fff;
+	border-radius: 100%;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+	transition: all 0.4s;
+}
+
+.switch--shadow:checked+label:before {
+	background-color: #8ce196;
+}
+
+.switch--shadow:checked+label:after {
+	transform: translateX(30px);
+}
+
+.locate {
+	&__content {
+		padding-top: 40px;
+		min-height: 400px;
+
+		p {
+			font-size: 20px;
+			line-height: 1.5;
+		}
+	}
+}
+
+.coordinate-transform {
+	padding-top: 30px;
+
+	&__block {
+		display: flex;
+		align-items: center;
+		font-size: 18px;
+		line-height: 1.5;
+		margin-bottom: 15px;
+
+		>p {
+			flex: 0 0 140px;
+			height: 30px;
+			line-height: 30px;
+			margin-right: 15px;
+			text-align: center;
+		}
+
+		>input {
+			flex: 1;
+			height: 20px;
+		}
+	}
+}
+
+.transform {
+	&-result {
+		margin-bottom: 10px;
+		> h5 {
+			padding-bottom: 10px;
+			font-weight: 600;
+		}
+	}
+
+	&-btn {
+		background-color: transparent;
+		border: 1px solid rgb(93, 93, 93);
+		color: rgb(93, 93, 93);
+		transition: all .3s;
+		padding: 10px 30px;
+		cursor: pointer;
+		margin-bottom: 10px;
+		font-size: 18px;
+
+		&:hover {
+			background-color: rgb(93, 93, 93);
+			color: rgb(255, 255, 255);
+		}
 	}
 }
