--- a/asset/scss/index.scss
+++ b/asset/scss/index.scss
@@ -256,6 +256,12 @@
 			height: 20px;
 		}
 	}
+
+	&__widget {
+		display: flex;
+		align-items: center;
+		margin-bottom: 10px;
+	}
 }
 
 .transform {
@@ -273,14 +279,28 @@
 		border: 1px solid rgb(93, 93, 93);
 		color: rgb(93, 93, 93);
 		transition: all .3s;
-		padding: 10px 30px;
+		padding: 10px;
+		margin-right: 10px;
 		cursor: pointer;
-		margin-bottom: 10px;
 		font-size: 18px;
 
 		&:hover {
 			background-color: rgb(93, 93, 93);
 			color: rgb(255, 255, 255);
+		}
+	}
+
+	&-option{
+		padding: 10px;
+		min-height: 46px;
+		border: 1px solid rgb(93, 93, 93);
+		outline: none;
+		color: rgb(93, 93, 93);
+		transition: all .3s ease-in-out;
+		font-size: 18px;
+		&:focus {
+			border: 1px solid rgb(22, 22, 22);
+			box-shadow: 0 0 5px#757575;
 		}
 	}
 }
